update memory process operations

--- a/CheatEngine/CheatEngine/CheatEngine.csproj
+++ b/CheatEngine/CheatEngine/CheatEngine.csproj
@@ -109,6 +109,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <Content Include="ToDo.txt" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
